@@ -78,6 +78,7 @@ WRITE(6)            sg_dd, sgm_dd, sgp_dd
 WRITE(10)           sg_dd, sgm_dd, sgp_dd
 WRITE(12)           sg_dd, sgm_dd, sgp_dd
 WRITE(16)           sg_dd, sgm_dd, sgp_dd
+WRITE ATOMIC(16)    ddpt
 WRITE BUFFER        sg_test_rwbuf, sg_write_buffer, ++
 WRITE LONG(10)      sg_write_long, ++
 WRITE LONG(16)      sg_write_long, ++
@@ -115,4 +116,4 @@ THIRD PARTY COPY IN (0x83).
 
 
 Douglas Gilbert
-15th April 2014
+22nd May 2014
