@@ -407,7 +407,7 @@ examples sub\-directory of the sg3_utils package. There is also a
 simple test script called sg_persist_tst.sh in the same directory.
 .PP
 The above sequence of commands was tested successfully on a Seagate Savvio
-10K.3 disk which has a SAS interface.
+10K.3 disk and a 1200 SSD both of which have SAS interfaces.
 .SH EXIT STATUS
 The exit status of sg_persist is 0 when it is successful. Otherwise see
 the sg3_utils(8) man page.
