@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.39 [20140521] [svn: r582]
+Changelog for sg3_utils-1.39 [20140522] [svn: r583]
   - sg_ses: add --eiioe=auto|force option
     - fix AES dpage element indexing problems
     - add --readonly option
@@ -19,10 +19,14 @@ Changelog for sg3_utils-1.39 [20140521] [svn: r582]
   - sg_inq: sync version descriptors dated 20105176
   - sg_vpd: add --vendor=VP option, re-order vendor
     specific pages, split lto into lto5 and lto6
+    - add Supported block lengths and protection types
+      page (sbc4r01)
+    - add Block device characterics extension
+      page (sbc4r02)
   - sg_copy_results, sg_get_lba_status, sg_luns,
     sg_read_buffer, sg_readcap, sg_referrals, sg_rtpg,
     sg_sat_set_features, sg_sat_identify:
-      add --readonly option
+    add --readonly option
   - sginfo: strip trailing spaces from INQUIRY text
   - sg_rbuf: add --echo option (to use echo buffer)
   - sg_lib: add sanitize command service action names
